tests/grammar/ansi-92/drop-view.test
# Simple DROP VIEW with no drop behaviour defaults to CASCADE
>DROP VIEW v1
statements:
  - type: DROP_VIEW
    drop_view_statement:
      view_name: v1
      drop_behaviour: CASCADE
# Simple DROP VIEW with explicit drop behaviour of CASCADE
>DROP VIEW v1 CASCADE
statements:
  - type: DROP_VIEW
    drop_view_statement:
      view_name: v1
      drop_behaviour: CASCADE
# Simple DROP VIEW with explicit drop behaviour of RESTRICT
>DROP VIEW v1 RESTRICT
statements:
  - type: DROP_VIEW
    drop_view_statement:
      view_name: v1
      drop_behaviour: RESTRICT
# Syntax error missing table/view name
>DROP VIEW
Syntax error.
Expected to find << identifier >> but found symbol[EOS]
DROP VIEW
        ^
# Syntax error expecting statement ending
>DROP VIEW v1 UNKNOWN
Syntax error.
Expected to find one of (EOS|';') but found identifier[UNKNOWN]
DROP VIEW v1 UNKNOWN
            ^^^^^^^^
